tests/lustre/syntax-errors/test_anonymous_enums.lus
type E = enum {A, B, C};

node x (a: E) returns (b: enum {A, B, C});
let
a = b;
tel.